--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "description": "A daemon application that performs automated tasks",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node ./src/main.ts"
+    "prebuild": "rm -rf dist",
+    "build": "tsc",
+    "dev": "npm run build && node ./dist/main.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@mattermost/client": "^10.9.0",
-    "axios": "^1.11.0"
+    "@types/express": "^5.0.3",
+    "axios": "^1.11.0",
+    "express": "^5.1.0",
+    "lodash": "^4.17.21",
+    "mudslide": "^0.31.6",
+    "neverthrow": "^8.2.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
