--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "tsc",
-    "dev": "npm run build && node ./dist/main.js"
+    "dev": "npm run build && node ./dist/main.js",
+    "start": "npm run build && node ./dist/main.js"
   },
   "author": "",
   "license": "ISC",
